Fixes details get stuck if you hover-off too fast.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,6 +66,7 @@ li {
   box-shadow: 1px 1px 2px 2px rgba(0, 0, 0, 0.2);
 }
 .details {
+  display: none;
   position: absolute;
   top: 100%;
   left: 50%;
